--- a/scss/basic.scss
+++ b/scss/basic.scss
@@ -814,6 +814,7 @@ h3, .h3 {
       line-height: 28px;
       .content {
         list-style: none;
+        padding-left: 0;
         .col {
           margin-bottom: 20px;
           > div {
@@ -892,6 +893,7 @@ h3, .h3 {
       color: #1a2e46;
       line-height: 28px;
       .content {
+        padding-left: 0;
         list-style: none;
         .col {
           margin-bottom: 20px;
