--- a/scss/basic.scss
+++ b/scss/basic.scss
@@ -1,5 +1,7 @@
 @import "compass/css3";
 
+$font-family-sans-serif: Arial, sans-serif, "Helvetica Neue", Helvetica, !default;
+$font-family-serif: Georgia, "Times New Roman", Times, serif !default;
 $icon-font-path: "../assets/fonts/bootstrap/" !default;
 $brand-primary: #1a2e46 !default;
 $navbar-default-color: #1a2e46 !default;
@@ -55,11 +57,11 @@ a {
       &.triangle-bottomright {
         border-left-width: 40px;
         border-bottom-width: 30px;
+        position: absolute;
       }
       &.h3 {
-        height: 30px;
+        padding: 0 15px 0 45px;
         line-height: 30px;
-        padding: 0 15px;
         text-transform: uppercase;
         font-weight: normal;
       }
@@ -101,13 +103,10 @@ div.top-container {
       height: auto;
       overflow: hidden;
       padding-top: 0;
+      padding-bottom: 5px;
     }
     img {
-      height: auto;
-      @media(max-width: $screen-xs-max) {
-        //width: 100%;
-        width: 60%;
-      }
+      height: 110px;
     }
     span.triangle-bottomright {
       display: none;
@@ -161,6 +160,7 @@ div.top-container {
       .navbar-left {
         float: none;
         .nav.navbar-nav {
+          text-align: left;
           font-size: 0;
           overflow-x: auto;
           white-space: nowrap;
@@ -172,7 +172,7 @@ div.top-container {
             > a {
               font-size: .875rem;
               margin: 0;
-              padding: .5rem 1rem;
+              padding: .5rem 0.4rem;
             }
             &:hover, &:active, &.active {
               a {
@@ -188,14 +188,26 @@ div.top-container {
       .navbar-left {
         .navbar-nav {
           > li {
-            width: 14%;
+            width: 13%;
             @media(max-width: 1024px) {
-              width: 14%;
+              width: 12%;
             }
-            &.group-li, &.contact-li {
+            &.contact-li {
               width: 14%;
               @media(max-width: 1024px) {
                 width: 15%;
+              }
+            }
+            &.group-li {
+              width: 14%;
+              @media(max-width: 1024px) {
+                width: 16%;
+              }
+            }
+            &.members-li {
+              width: 18%;
+              @media(max-width: 1024px) {
+                width: 20%;
               }
             }
             > a {
@@ -277,6 +289,16 @@ h3, .h3 {
   }
 }
 
+.first-container {
+  div.bg {
+    .right-top {
+      ul, p {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
 #index {
   .first-container {
     .flexslider {
@@ -313,9 +335,25 @@ h3, .h3 {
           }
         }
       }
+      &:hover {
+        .flex-direction-nav a {
+          opacity: 1;
+        }
+      }
       .flex-direction-nav a {
         height: 50px;
         margin-top: -25px;
+        opacity: 1;
+        &:before {
+          color: #8594a2;
+          content: '';
+        }
+        &.flex-prev {
+          background-image: url("../assets/images/index/first/left.png");
+        }
+        &.flex-next {
+          background-image: url("../assets/images/index/first/right.png");
+        }
       }
     }
   }
@@ -333,6 +371,7 @@ h3, .h3 {
         }
         &.right-content {
           position: static;
+          padding-bottom: 30px;
           p {
             padding: 0 25px 0 25px;
             color: #787878;
@@ -349,7 +388,7 @@ h3, .h3 {
               margin-top: 0;
             }
           }
-          button.btn {
+          a.btn {
             float: right;
             margin-right: 10px;
             margin-bottom: 10px;
@@ -372,6 +411,7 @@ h3, .h3 {
     overflow: hidden;
     margin-bottom: 20px;
     .content {
+      display: flex;
       div.col {
         margin-bottom: 20px;
         &.left {
@@ -381,9 +421,16 @@ h3, .h3 {
           @media(max-width: $screen-xs-max) {
             width: 100%;
           }
-          p.title {
+          p {
             margin-left: 1%;
-            font-size: 20px;
+            &.title {
+              font-size: 20px;
+              line-height: 40px;
+              border-bottom: 1px solid #ccc;
+            }
+            a{
+              text-decoration: underline;
+            }
           }
           form {
             input, textarea {
@@ -425,7 +472,6 @@ h3, .h3 {
           img {
             width: 100%;
             box-shadow: 0 3px 10px 2px #666;
-            float: right;
             @media(max-width: $screen-sm-max) {
               float: none;
               width: 90%;
@@ -459,7 +505,9 @@ h3, .h3 {
           width: 60%;
         }
         @media(max-width: $screen-xs-max) {
-          width: 70%;
+          width: 90%;
+          right: 10px;
+          top: 10px;
         }
         width: 40%;
         h3 {
@@ -586,14 +634,9 @@ h3, .h3 {
         text-align: left;
         position: absolute;
         bottom: 30px;
-        right: 30px;
-        color: #8594a2;
-        @media(max-width: 1024px) {
-          width: 60%;
-        }
-        @media(max-width: $screen-xs-max) {
-          width: 70%;
-        }
+        color: #52caf5;
+        width: 350px;
+        right: 10px;
         h3 {
           color: #47cff8;
           font-weight: normal;
@@ -608,23 +651,69 @@ h3, .h3 {
     ul.content {
       list-style: none;
       padding-left: 0;
-      border: 1px solid #c6e3ff;
       margin-bottom: 15px;
       > li.col {
-        padding: 0;
-        img {
-          width: 100%;
-          height: auto;
+        padding: 10px;
+        &:nth-child(odd) {
+          padding-left: 0;
         }
-        h3 {
-          text-align: left;
-          padding: 0 10px 0 20px;
-          font-size: 18px;
-          color: #4b5667;
-          font-weight: normal;
-          line-height: 30px;
-          margin-top: 10px;
-          margin-bottom: 0;
+        &:nth-child(even) {
+          padding-right: 0;
+        }
+        @media(max-width: $screen-sm-max) {
+          padding: 10px 0;
+        }
+        > div {
+          position: relative;
+          color: #fff;
+          img {
+            width: 100%;
+            height: auto;
+          }
+          .data {
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            font-weight: normal;
+            top: 50%;
+            transform: translateY(-50%);
+            h3, a.h3 {
+              font-size: 24px;
+              font-weight: normal;
+              text-align: center;
+              margin: 0 5%;
+              padding: 0 5%;
+              line-height: 36px;
+              border: 1px solid;
+            }
+            a.h3 {
+              display: block;
+              padding: 20px 5%;
+              cursor: pointer;
+              @media(max-width: $screen-xs-max) {
+                padding: 0 5%;
+              }
+              &:hover {
+                color: #fff;
+                text-decoration: none;
+              }
+            }
+            h4 {
+              font-size: 20px;
+              line-height: 30px;
+            }
+          }
+          a.h5 {
+            position: absolute;
+            cursor: pointer;
+            right: 10px;
+            bottom: 0;
+            font-size: 18px;
+            color: #fff;
+            &:hover, &:active, &:visited {
+              color: #fff;
+            }
+          }
         }
         hr {
           border-top-color: #a7c3f9;
@@ -660,6 +749,34 @@ h3, .h3 {
         }
       }
     }
+    &.single-event {
+      padding: 0 0 20px 0;
+      h3 {
+        font-size: 26px;
+        line-height: 46px;
+        margin-top: 30px;
+        font-weight: normal;
+        width: 100%;
+        border-bottom: 4px solid #99cdff;
+        color: #1a2e46;
+      }
+      p {
+        margin: 0 0 10px;
+        text-align: left;
+        color: #787878;
+        &.center {
+          text-align: center;
+        }
+      }
+      img {
+        &.normal {
+          width: auto;
+        }
+        width: 100%;
+        display: block;
+        margin: 10px auto;
+      }
+    }
   }
 }
 
@@ -691,6 +808,46 @@ h3, .h3 {
         }
         ul {
           padding-left: 20px;
+        }
+      }
+    }
+  }
+  .first-next-container {
+    div.content {
+      padding-left: 0;
+      border: 1px solid #c6e3ff;
+      margin-bottom: 15px;
+      overflow: hidden;
+      position: relative;
+      > div.pull-left {
+        color: #787878;
+        text-align: left;
+        position: absolute;
+        left: 0;
+        top: 0;
+        margin: 5px;
+        @media(max-width: $screen-xs-max) {
+          position: relative;
+          width: 100%;
+          float: none !important;
+        }
+        h4 {
+          font-weight: normal;
+        }
+        ul {
+          padding-left: 20px;
+          font-size: 16px;
+        }
+      }
+      > img.pull-right {
+        width: 80%;
+        margin: 5px;
+        @media(max-width: $screen-xs-max) {
+          position: relative;
+          width: 95%;
+          margin: 0;
+          margin-bottom: 5px;
+          float: none !important;
         }
       }
     }
@@ -792,12 +949,26 @@ h3, .h3 {
       position: relative;
     }
   }
+  .first-second-container {
+    h3 {
+      text-align: left;
+      font-size: 18px;
+      font-weight: normal;
+      color: #1a2e46;
+      line-height: 45px;
+    }
+    img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+  }
+
   .second-container {
     ul.content {
       @include gradient-horizontal(#fff, #8594a2);
       list-style: none;
       padding-left: 0;
-      border: 1px solid #c6e3ff;
       margin-bottom: 15px;
       > li.col {
         img {
@@ -827,6 +998,7 @@ h3, .h3 {
       }
     }
   }
+
   .third-container {
     .container-inner {
       margin-bottom: 20px;
@@ -864,6 +1036,7 @@ h3, .h3 {
       }
     }
   }
+
 }
 
 #members {
@@ -882,8 +1055,9 @@ h3, .h3 {
         padding: 50px;
         width: 60%;
         line-height: 1.5;
+        margin-top: 0;
         @media(max-width: $screen-xs-max) {
-          margin-top: 0;
+          width: 350px;
         }
       }
     }
@@ -923,7 +1097,7 @@ h3, .h3 {
           margin-bottom: 20px;
           > div {
             border: 1px solid #c6e3ff;
-            height: 400px;
+            height: 350px;
             @media(max-width: $screen-xs-max) {
               height: auto;
             }
@@ -931,8 +1105,7 @@ h3, .h3 {
               margin-bottom: 10px;
               width: 100%;
               &.logo {
-                width: 140px;
-                height: 100px;
+                width: 65%;
               }
             }
             h4 {
@@ -945,6 +1118,7 @@ h3, .h3 {
               font-size: 16px;
               width: 80%;
               margin: auto;
+              margin-bottom: 10px;
             }
 
           }
@@ -955,11 +1129,6 @@ h3, .h3 {
 }
 
 #contact {
-  .first-container, .second-container {
-    div.bg {
-
-    }
-  }
   .first-container {
     div.bg {
       img {
@@ -977,10 +1146,27 @@ h3, .h3 {
       position: relative;
       background-image: url("../assets/images/contact/second-bg.jpg");
       .right-bottom {
+        text-align: left;
         color: #1a2e46;
         position: absolute;
         right: 50px;
         bottom: 50px;
+        width: 450px;
+        @media(max-width: $screen-phone) {
+          width: 350px;
+        }
+        img {
+          width: 150px;
+          display: block;
+          position: absolute;
+          right: 0;
+        }
+      }
+      @media(max-width: $screen-xs-max) {
+        background-position: right center;
+        .right-bottom {
+          right: 5px;
+        }
       }
     }
   }
